# gcc-toolchain

./: MODULE.bazel  internal.bzl
docs/: defs.md
examples/hello_world_asm/: BUILD.bazel  main_aarch64.s  main_armv7.s  main_x86_64.s
toolchain/: defs.bzl  repositories.bzl
